--- a/Scripts/Rpath_main_results.Rmd
+++ b/Scripts/Rpath_main_results.Rmd
@@ -3,7 +3,7 @@ title: "Rpath.main.results"
 output: html_document
 ---
 
-#Code to simulate the ecosystem-wide impacts of harvesting mesopelagic fishes at a yearly rate of 25 and 50% in the California Current for the paper titled "The economic tradeoffs and ecological implications associated with a potential mesopelagic fishery in the California Current". Code was originally created by Kerim Aydin (kerim.aydin@noaa.gov), modified by Laura Koehn (laura.koehn216@gmail.com), Sally Dowd (sdowd20@berkeley.edu), and Melissa Chapman (mchapman@berkeley.edu) 
+#Code to simulate the ecosystem-wide impacts of harvesting mesopelagic fishes at a yearly rate of 25 and 50% in the California Current for the paper titled "The economic tradeoffs and ecological implications associated with a potential mesopelagic fishery in the California Current". We use input parameters from the California Current food web model developed in Koehn et al. (2016).Code was originally created by Kerim Aydin (kerim.aydin@noaa.gov) and modified by Laura Koehn (laura.koehn216@gmail.com), Sally Dowd (sdowd20@berkeley.edu), and Melissa Chapman (mchapman@berkeley.edu) 
 
 #Load required packages
 ```{r}
@@ -23,15 +23,15 @@ library(viridis)
 Cdiet <- "../Data/Diet_CalCur_USE.csv"  #Diet matrix
 Cbase <- "../Data/Groupinfo_CalCur-USE.csv"  #Base biomass, production, fishing, etc.
 
-#Load unbalanced Ecopath model
+#Load unbalanced food web model
 CalCur_unbal <- read.rpath.params(Cbase, Cdiet)
 
 #Read in created parameter files
 check.rpath.params(CalCur_unbal)
 ```
 
-#Run Ecopath in R through Rpath
-#Solve for EE to balance an unbalanced Ecopath object and convert the Ecopath model to an Rpath object 
+#Use Rpath to run the R-based implementation of Ecopath with Ecosim (EwE)
+#Solve for EE to balance an unbalanced food web object and convert the model to an Rpath object
 ```{r}
 #Balance the scenario using rpath function 
 Cal_bal <- rpath(CalCur_unbal) 
@@ -201,15 +201,15 @@ write.csv(data_2, "/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Sc
   change_2_total <- as.data.frame(change_2_total)
 ```
 
-#Change over time graphs for scenario 6 and 7 for all functional groups (with the exception of mesopelagic fish) to create Figure 3a-b in the paper and Appendix S3: Figure S2 in the supplementary material. The relative end biomass on the x axis the biomass at the end of the simulation in 2050 (month 600).  
+#Change over time graphs for scenario 6 and 7 for all functional groups (with the exception of mesopelagic fish) that contribute to Figure 3 in the paper and Appendix S2: Figure S2 in the supplementary material. The relative end biomass on the x axis the biomass at the end of the simulation in 2050 (month 600).  
 ```{r}
 #Define a common ggplot theme
-standard_theme <- theme_bw() + theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+standard_theme <- theme_bw() + theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + theme(legend.text.align= 0, legend.title= element_text(size = 10), legend.text = element_text(size= 9), axis.text=element_text(size=8), axis.title=element_text(size=10)) + theme(axis.text.y = element_text(hjust= 0.95))
 
 #Scenario 7: yearly 50% harvest rate applied to mesopelagic fish 
 
-  #Generate graph with functional groups with high diet dependence on mesopelagic fish:    Diet over 0.05 (mesopelagic fish make up at least 5% of their diet)
+  #Generate graph with functional groups with high diet dependence on mesopelagic fish: Diet over 0.05 (mesopelagic fish make up at least 5% of their diet)
     change_1_1_df<- change_1_overtime_df(diet_over_0.05)
     change_1_1_df <- as.data.frame(change_1_1_df)
     change_1_1 <- change_1_1_df %>% mutate(value = round(as.numeric(paste(value)), 2),
@@ -247,7 +247,7 @@ theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
     change_1_2$Value <- factor(change_1_2$Value, levels = c("Non-commercial", "Both",
     "Neither"))
 
-    change_1_2_plot <- change_1_2 %>% ggplot(aes(col= Value)) + geom_point(aes(x= biomass_prop, y= reorder(species, biomass_prop))) + 
+    change_1_2_plot <- change_1_2 %>% ggplot(aes(col= Value)) + geom_point(aes(x= biomass_prop, y=        reorder(species, biomass_prop))) + 
     scale_color_manual(values = c("#0000FF", "#00FF70")) +
     scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."="Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod","Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."="Splitnose rockfish")) + 
     xlim(0.70, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size=
@@ -260,11 +260,11 @@ theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
     commercial_predators)
     noncommercial_predators_df <- as.data.frame(noncommerical_predators) %>%
     rename(species= noncommerical_predators)
-    combo <- rbind(commercial_predators_df, noncommercial_predators_df, by= "species")       %>% mutate(Dependence= 1)
+    combo <- rbind(commercial_predators_df, noncommercial_predators_df, by= "species") %>% mutate(Dependence= 1)
     no_dependence <- change_1_total %>% left_join(combo, by= "species")
     no_dependence[is.na(no_dependence)] <- 0 
     no_dependence <-no_dependence[!duplicated(no_dependence$species),] 
-    no_dependence <- no_dependence[-c(15,30),] #Need to remove mesopelagic fish and          juvenile hake from dataset as they don't have commercial or non-commercial value so      are included here but they do have diet dependence on mesopelagic fish
+    no_dependence <- no_dependence[-c(15,30),] #Need to remove mesopelagic fish and juvenile hake from   dataset as they don't have commercial or non-commercial value so are included here but they do have   diet dependence on mesopelagic fish
     no_dependence_final <- no_dependence %>% filter(Dependence==0)
     no_dependence_final <- no_dependence_final %>% mutate(value =
     round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99,
@@ -276,7 +276,7 @@ theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
     "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing",
     "Neither", "Increasing"), right = TRUE)) %>% arrange(value) %>% rename(biomass_prop=
     value) 
-    change_1_3_plot <- change_1_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y= reorder(species, biomass_prop))) + 
+    change_1_3_plot <- change_1_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y= reorder(species,      biomass_prop))) + 
     xlim(0.70, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size=
     0.75) + 
     xlab("Relative biomass") + ylab("Species with no diet proportion") + 
@@ -294,7 +294,7 @@ Orcas"= "Transient orcas", "Juv. flatfish"= "Juv. flat.", "Cali. gull" = "Califo
 
 #Scenario 6: yearly 25% harveset rate applied to mesopelagics
     
- #Generate graph with functional groups with high diet dependence on mesopelagic fish:    Diet over 0.05 (mesopelagic fish make up at least 5% of their diet)
+ #Generate graph with functional groups with high diet dependence on mesopelagic fish: Diet over 0.05 (mesopelagic fish make up at least 5% of their diet)
     change_2_1_df <- change_2_overtime_df(diet_over_0.05)
     change_2_1_df <- as.data.frame(change_2_1_df)
     change_2_1 <- change_2_1_df %>% mutate(value = round(as.numeric(paste(value)), 2),
@@ -316,7 +316,7 @@ Orcas"= "Transient orcas", "Juv. flatfish"= "Juv. flat.", "Cali. gull" = "Califo
     "Classification") + standard_theme 
     change_2_1_plot 
 
-  #Generate graph with functional groups with low diet dependence on mesopelagic fish:     Diet under 0.05 (mesopelagic fish make up less than 5% of their diet)
+  #Generate graph with functional groups with low diet dependence on mesopelagic fish: Diet under 0.05 (mesopelagic fish make up less than 5% of their diet)
     change_2_2_df <- change_2_overtime_df(diet_under_0.05_2)
     change_2_2_df <- as.data.frame(change_2_2_df)
     change_2_2 <- change_2_2_df %>% mutate(value = round(as.numeric(paste(value)), 2),
@@ -329,7 +329,7 @@ Orcas"= "Transient orcas", "Juv. flatfish"= "Juv. flat.", "Cali. gull" = "Califo
     change_2_2$Value <- factor(change_2_2$Value, levels = c("Non-commercial", "Both",
     "Neither"))
 
-    change_2_2_plot <- change_2_2 %>% ggplot(aes(col= Value)) + geom_point(aes(x= biomass_prop, y= reorder(species, biomass_prop))) + 
+    change_2_2_plot <- change_2_2 %>% ggplot(aes(col= Value)) + geom_point(aes(x= biomass_prop, y=        reorder(species, biomass_prop))) + 
     scale_color_manual(values = c("#0000FF", "#00FF70")) +
     scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"="Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"="Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."="Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod","Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish","mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."=
 "Splitnose rockfish")) + 
@@ -352,25 +352,15 @@ Orcas"= "Transient orcas", "Juv. flatfish"= "Juv. flat.", "Cali. gull" = "Califo
     value) 
 
     change_2_3 %>% filter(result== "Neither")
-    change_2_3_plot <- change_2_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y= reorder(species, biomass_prop))) + 
+    change_2_3_plot <- change_2_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y= reorder(species,      biomass_prop))) + 
     xlim(0.70, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size=
     0.75) + 
     xlab("Relative biomass") + ylab("Species with no diet proportion") + 
-     scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"=
-  "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali.
-  gull"= "California gull", "carniv-zoops" = "Carniv. zooplankton", "copepods"=
-  "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"=
-  "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."=
-  "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton",
-"Pacific Mackerel"= "Pacific mackerel",
-  "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon
-  Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"=
-  "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient
-  Orcas"= "Transient orcas", "Juv. flatfish"= "Juv. flat.", "Cali. gull" = "California gull")) + standard_theme 
+     scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carniv. zooplankton", "copepods"="Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"="Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."="Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Juv. flatfish"= "Juv. flat.", "Cali. gull" = "California gull")) + standard_theme 
     change_2_3_plot
 ```
 
-#Time series graphs for scenario 6 and 7 for functional groups with high and low diet dependence on mesoopelagic fish. This code created Appendix S3: Figure 1a-d in the supplementary material. The relative biomass on the y axis is the proportion of original biomass throughout the entire 50-year simulation. 
+#Time series graphs for scenario 6 and 7 for functional groups with high and low diet dependence on mesoopelagic fish. This code created Appendix S2: Figure 1a-d in the supplementary material. The relative biomass on the y axis is the proportion of original biomass throughout the entire 50-year simulation. 
 ```{r}
 scenario_7 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Scenario_7.csv") #Results from 50% harvest rate 
 scenario_6 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Scenario_6.csv") #Results from 25% harvest rate
@@ -406,9 +396,7 @@ scenario_6 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Da
   geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) +
   guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) +
   scale_linetype_manual("Classification",values=c("Commercial"= 1,
-  "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
-  ggsave(width = 8.75, height = 5.25,
-  "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.50.jpeg", dpi=600)
+  "Non-commercial"=2,"Both"=3, "Neither"=4))
   plot_scenario_7_high
 
   plot_scenario_6_high <- scenario_6_high %>% filter(spp %in% diet_over_0.05) %>%
@@ -429,8 +417,7 @@ scenario_6 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Da
   geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) +
   guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) +
   scale_linetype_manual("Classification",values=c("Commercial"= 1,
-  "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
-  ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.25.jpeg", dpi=600)
+  "Non-commercial"=2,"Both"=3, "Neither"=4)) 
   plot_scenario_6_high
 
 #Graph for functional groups with low diet dependence on mesopelagic fish
@@ -461,8 +448,7 @@ scenario_6 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Da
   labs(colour= "Species with low diet proportion", title= "d") + standard_theme + 
   geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) +
   guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) +
-  scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + 
-  ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.50.jpeg", dpi=600)
+  scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) 
   plot_scenario_7_low
 
   plot_scenario_6_low <- scenario_6_low %>% filter(spp %in% diet_under_0.05) %>%
@@ -484,15 +470,13 @@ scenario_6 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Da
   labs(colour= "Species with low diet proportion", title= "b") + standard_theme +
   geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) +
   guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) +
-  scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) +
-  ggsave(width = 8.75, height = 5.25,
-  "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.25.jpeg", dpi=600)
+  scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) 
   plot_scenario_6_low
 ```
 
 #Calculations for paper statistics.
 ```{r}
-#Find which functional groups increased/decreased at the end of the 25% and 50% harvest rate scenarios 
+#Find which functional groups increased/decreased at the end of the 25% and 50% harvest rate scenarios
   biomass_increase_25 <- scenario_6 %>% filter(month==600, biomass >1) %>%
   mutate(difference= abs(1-biomass), percent = abs(1-biomass)*100)
   biomass_increase_25
